Name change in manifest, browser (version) support added to README.

--- a/src.chrome/manifest.json
+++ b/src.chrome/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "UVIndex",
+    "name": "UVExt",
     "version": "1.0",
     "author": "Bryan Smith",
     "description": "Shows the current UV levels for select Australian cities.",
